--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,23 @@ flex-direction: column;
 border: 2px solid black;
 width: 30%;
 height:100vh;
+margin-top: 4rem;
+}
+form {
+  border: 2px solid;
+  margin-top: 4rem;
+  width: 100%;
+  height: 23rem;
+  display: flex;
+  flex-direction: column;
+}
+fieldset{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* main Body Area */
@@ -28,7 +45,7 @@ height:100vh;
   position: relative;
   border: 2px solid;
   left: 31rem;
-  top: -49rem;
+  top: -50rem;
   width: 63%;
   height: 11rem;
   flex-direction: column;
@@ -42,4 +59,56 @@ height:100vh;
   border: 2px solid black;
   width: 63%;
   height: 71vh;
+}
+
+/* Aside Area  */
+.logo-section {
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid;
+
+}
+.form-container {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  flex-direction: column;
+}
+.error-wrapper {
+  display: flex;
+  margin-top: 2rem;
+  width: 100%;
+  height: 5rem;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+}
+.form-intro-wrapper {
+  margin-top: 3rem;
+  display: flex;
+   border: sold;
+  border: solid black;
+  height: 3rem;
+  width: 21rem;
+  justify-content: center;
+}
+.traveling-people-wrapper,
+.duration-trip-wrapper,
+.destination-form-wrapper,
+.date-wrapper {
+  display: flex;
+  border: 1px solid black;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 4rem;
+  align-items: center;
+  width: 100%;
+  
+}
+
+.hidden {
+  display: none; 
 }
