--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,34 +1,38 @@
-/* color pallet */
-/* #D7E9B9:MEDIUM
-#FFFBAC:LIGHEST
-#FFD495:MEDIUM
-#FAAB78:DARKEST */
+/* color pallet 
+#00ABB3: blue 
+#3C4048:black
+#B2B2B2: darkGrey
+#EAEAEA:white
+*/
 
 
 * {
   margin:0;
   padding:0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   font-family: 'Kalam',cursive;
 }
 
 /* semantic framing */
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    border: 2px solid black;
-    height: 5rem;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color:#3C4048;
+  height: 5rem;
+  flex-direction: row;
+}
+body {
+height:100vh;
+overflow-y: scroll;
+background-color:#EAEAEA ;
 }
 aside {
-display: flex;
+display:flex;
 flex-direction: column;
-border: 2px solid black;
 width: 30%;
-height:100vh;
-margin-top: 4rem;
+background-color:#3C4048;
 }
 form {
   border: 2px solid;
@@ -37,6 +41,7 @@ form {
   height: 23rem;
   display: flex;
   flex-direction: column;
+  background-color:#00ABB3;
 }
 fieldset{
   height: 100%;
@@ -58,7 +63,9 @@ article {
   flex-direction: column;
   align-items: center;
   height: 13rem;
+  background-color: #D7E9B9;
 }
+
 
 /* navBarArea */
 .logout-btn-wrapper > .logout {
@@ -71,39 +78,55 @@ article {
 
 .customer-welcome {
   display: flex;
-  position: relative;
-  border: 2px solid;
-  left: 31rem;
-  top: -50rem;
-  width: 63%;
-  height: 11rem;
+  position: absolute;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  top: 6rem;
+  right: 3rem;
+  width: 63%;
+  height: 14rem;
+  margin-bottom: 3rem;
+  background-color: #D7E9B9;
 }
 .trips-display {
-  position: relative;
+  position: absolute;
   left: 31rem;
-  bottom: 46rem;
+  bottom: -17rem;
   border: 2px solid black;
   width: 63%;
   height: 86vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
+  background-color: #FFD495;
+  
+}
+.bookify-logo {
+  height:15rem;
 }
      
 
 /* Aside Area  */
 .logo-section {
-  height: 8rem;
+  height: 31rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border: 1px solid;
-
+  background-color:#B2B2B2;
+}
+.company-wrapper {
+ border:1px solid black;
+  height: 3rem;
+  width: 24rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:#3C4048;
+  color:white;
+  font-size: x-large;
 }
 .form-container {
   display: flex;
@@ -111,23 +134,42 @@ article {
   align-items: center;
   flex-direction: column;
 }
+.disclaimer{
+  color:white;
+  font-size: larger;
+}
 .error-wrapper {
   display: flex;
   margin-top: 2rem;
   width: 100%;
-  height: 5rem;
+  height: 7rem;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  background-color: #B2B2B2;
+  
 }
+.error-message{
+  color:#3C4048;
+  font-size: x-large;
+}
+
+
 .form-intro-wrapper {
-  margin-top: 3rem;
+  margin-top: 6rem;
   display: flex;
-   border: sold;
+  border: sold;
   border: solid black;
-  height: 3rem;
-  width: 21rem;
+  height: 9rem;
+   width: 25rem;
   justify-content: center;
+  background-color:#B2B2B2;
+  align-items: center;
+}
+.form-intro {
+  height: 66%;
+  background-color:#00ABB3;
+  font-size: xx-large;
+  color:white;   
 }
 
 .traveling-people-wrapper,
@@ -148,27 +190,36 @@ article {
   width: 57%;
   align-content: center;
   justify-content: center;
-  border:1px solid black; 
+  border:1px solid black;
+  background-color: #3C4048;
+
 }
 .book-input-sub {
   height: 2rem;
   margin-top: 7px;
   width: 83%;
   border-radius: 3%;
+  background-color:#EAEAEA;
+    
+    
+  font-size: x-large;
 }
 .estimated-cost-display{
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%; 
+  color:white;
 }
  .est-cost-wrapper > .show-est-cost {
-width: 9rem;
-height: 2rem;
+  width: 13rem;
+  height: 2rem;
+  font-size: x-large;
+  
 }
 .est-cost-wrapper {
   border: 1px solid black;
-  width: 12rem;
+  width: 15rem;
   display: flex;
   justify-content: center;
   height: 3rem;
@@ -197,6 +248,7 @@ height: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color:#FFFBAC;
 }
 .book-card >img {
   height:8rem;
