Add css so the page does not look bare boned anymore

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,38 +57,32 @@ width: 10rem;
 height: 2rem;
 }
 article {
-  border:1px solid;
   width: 73%;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 13rem;
-  background-color: #D7E9B9;
+  background-color:#B2B2B2;
 }
 
 
 /* navBarArea */
 .logout-btn-wrapper > .logout {
-  height:100%;
-  width:7rem;
+  height: 100%;
+  width: 14rem;
+  background-color: #00ABB3;
+  font-size: 31px;
+  color: white;
+  cursor:grab;
+}
+.logout:hover {
+background-color:white;
+color:#00ABB3;
 }
 
 
 /* main Body Area */
 
-.customer-welcome {
-  display: flex;
-  position: absolute;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  top: 6rem;
-  right: 3rem;
-  width: 63%;
-  height: 14rem;
-  margin-bottom: 3rem;
-  background-color: #D7E9B9;
-}
 .trips-display {
   position: absolute;
   left: 31rem;
@@ -100,13 +94,13 @@ article {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-color: #FFD495;
+  background-color:#00ABB3;
   
 }
 .bookify-logo {
-  height:15rem;
+  height:18rem;
 }
-     
+
 
 /* Aside Area  */
 .logo-section {
@@ -118,8 +112,8 @@ article {
   background-color:#B2B2B2;
 }
 .company-wrapper {
- border:1px solid black;
-  height: 3rem;
+  border:1px solid black;
+  height: 6rem;
   width: 24rem;
   display: flex;
   align-items: center;
@@ -160,7 +154,7 @@ article {
   border: sold;
   border: solid black;
   height: 9rem;
-   width: 25rem;
+  width: 25rem;
   justify-content: center;
   background-color:#B2B2B2;
   align-items: center;
@@ -170,6 +164,11 @@ article {
   background-color:#00ABB3;
   font-size: xx-large;
   color:white;   
+}
+.form-intro:hover {
+  background-color: white;
+  color: #00ABB3;
+  cursor: grab;
 }
 
 .traveling-people-wrapper,
@@ -192,7 +191,7 @@ article {
   justify-content: center;
   border:1px solid black;
   background-color: #3C4048;
-
+  
 }
 .book-input-sub {
   height: 2rem;
@@ -200,9 +199,12 @@ article {
   width: 83%;
   border-radius: 3%;
   background-color:#EAEAEA;
-    
-    
   font-size: x-large;
+}
+.book-input-sub:hover{
+  cursor:grab;
+  background-color: white;
+  color: #00ABB3;
 }
 .estimated-cost-display{
   display: flex;
@@ -211,11 +213,16 @@ article {
   height: 100%; 
   color:white;
 }
- .est-cost-wrapper > .show-est-cost {
+.est-cost-wrapper > .show-est-cost {
   width: 13rem;
   height: 2rem;
-  font-size: x-large;
-  
+  font-size: x-large; 
+}
+
+.show-est-cost:hover{
+  cursor: grab;
+  background-color: white;
+  color: #00ABB3;
 }
 .est-cost-wrapper {
   border: 1px solid black;
@@ -229,7 +236,45 @@ article {
   width: 100%;
   justify-content: space-around;
 }
- /* card displays */
+
+/* user Welcome Area  */
+.user-info-area{
+  display: flex;
+  flex-direction: column;
+  margin-left: -31rem;
+  width: 24rem;
+}
+.customer-welcome {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 6rem;
+  right: 3rem;
+  width: 63%;
+  height: 14rem;
+  margin-bottom: 3rem;
+  background-color:#3C4048;
+  color: white;
+}
+.customer-welcome > .hello-person {
+ font-size: 38px;
+}
+.annual-spending-wrapper,
+.today-wrapper{
+  display: flex;
+  border: 1px solid;
+  height: 4rem;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+  background-color:#00ABB3;
+  font-size:15px;
+}
+
+/* card displays */
 .trip-info-card-past,
 .trip-info-card-pend,
 .trip-info-card-upcoming {
@@ -237,19 +282,29 @@ article {
   width: 80%;
   display: flex;
   overflow-y: scroll;
+  scrollbar-width: 11px;
   flex-direction: column;
   align-items: center;
   height: 10rem;
-  
+  background-color: #3C4048;
 }
 .book-card {
   border: 1px solid black;
-  height: 20rem;
+  height: 26rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color:#FFFBAC;
+  background-color: #EAEAEA;
+  margin-top: 3rem;
+  width: 66%;
+  box-shadow: 22px 13px;
 }
+.section-label{
+ color:#EAEAEA;
+ size:17px;
+ font-weight: 400;
+}
+
 .book-card >img {
   height:8rem;
   
