--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,15 +1,14 @@
 /* color pallet 
-#00ABB3: blue 
-#3C4048:black
-#B2B2B2: darkGrey
-#EAEAEA:white
-*/
+#FFE194 main: (golden orange medium) 
+#E8F6EF : background (high light blue white)
+#B8DFD8: hover ( medium blue) 
+#4C4C6D: accent color : text etc 
+ */
 
 
 * {
   margin:0;
   padding:0;
-  /* box-sizing: border-box; */
   font-family: 'Kalam',cursive;
 }
 
@@ -19,20 +18,20 @@ nav {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  background-color:#3C4048;
+  background-color:#FFE194;
   height: 5rem;
   flex-direction: row;
 }
 body {
 height:100vh;
 overflow-y: scroll;
-background-color:#EAEAEA ;
+background-color:#E8F6EF ;
 }
 aside {
 display:flex;
 flex-direction: column;
 width: 30%;
-background-color:#3C4048;
+background-color:#FFE194;
 }
 form {
   border: 2px solid;
@@ -41,7 +40,7 @@ form {
   height: 23rem;
   display: flex;
   flex-direction: column;
-  background-color:#00ABB3;
+  background-color:#B8DFD8;
 }
 fieldset{
   height: 100%;
@@ -62,7 +61,8 @@ article {
   flex-direction: column;
   align-items: center;
   height: 13rem;
-  background-color:#B2B2B2;
+  background-color:#B8DFD8;
+  
 }
 
 
@@ -70,14 +70,14 @@ article {
 .logout-btn-wrapper > .logout {
   height: 100%;
   width: 14rem;
-  background-color: #00ABB3;
+  background-color:#B8DFD8;
   font-size: 31px;
-  color: white;
+  color: black;
   cursor:grab;
 }
 .logout:hover {
 background-color:white;
-color:#00ABB3;
+color:#4C4C6D;
 }
 
 
@@ -94,7 +94,7 @@ color:#00ABB3;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-color:#00ABB3;
+  background-color:#FFE194;
   
 }
 .bookify-logo {
@@ -109,7 +109,7 @@ color:#00ABB3;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color:#B2B2B2;
+  background-color:#FFE194;
 }
 .company-wrapper {
   border:1px solid black;
@@ -118,8 +118,8 @@ color:#00ABB3;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:#3C4048;
-  color:white;
+  background-color:#E8F6EF;
+  color:black;
   font-size: x-large;
 }
 .form-container {
@@ -129,7 +129,7 @@ color:#00ABB3;
   flex-direction: column;
 }
 .disclaimer{
-  color:white;
+  color:black;
   font-size: larger;
 }
 .error-wrapper {
@@ -139,11 +139,11 @@ color:#00ABB3;
   height: 7rem;
   justify-content: center;
   align-items: center;
-  background-color: #B2B2B2;
+  background-color: #4C4C6D;
   
 }
 .error-message{
-  color:#3C4048;
+  color:#E8F6EF;
   font-size: x-large;
 }
 
@@ -151,23 +151,23 @@ color:#00ABB3;
 .form-intro-wrapper {
   margin-top: 6rem;
   display: flex;
-  border: sold;
   border: solid black;
   height: 9rem;
   width: 25rem;
   justify-content: center;
-  background-color:#B2B2B2;
+  background-color:#B8DFD8;
   align-items: center;
+  border-radius: 5%;
 }
 .form-intro {
   height: 66%;
-  background-color:#00ABB3;
+  background-color:#4C4C6D;
   font-size: xx-large;
-  color:white;   
+  color:#E8F6EF;   
 }
 .form-intro:hover {
   background-color: white;
-  color: #00ABB3;
+  color: #4C4C6D;
   cursor: grab;
 }
 
@@ -183,14 +183,14 @@ color:#00ABB3;
   align-items: center;
   width: 100%;  
 }
+.est-cost-wrapper,
 .button-styler{
   display: flex;
   height: 3rem;
   width: 57%;
   align-content: center;
   justify-content: center;
-  border:1px solid black;
-  background-color: #3C4048;
+  background-color: #4C4C6D;
   
 }
 .book-input-sub {
@@ -204,14 +204,14 @@ color:#00ABB3;
 .book-input-sub:hover{
   cursor:grab;
   background-color: white;
-  color: #00ABB3;
+  color: #4C4C6D;
 }
 .estimated-cost-display{
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%; 
-  color:white;
+  color:black;
 }
 .est-cost-wrapper > .show-est-cost {
   width: 13rem;
@@ -241,7 +241,7 @@ color:#00ABB3;
 .user-info-area{
   display: flex;
   flex-direction: column;
-  margin-left: -31rem;
+  margin-left: 0rem;
   width: 24rem;
 }
 .customer-welcome {
@@ -255,8 +255,8 @@ color:#00ABB3;
   width: 63%;
   height: 14rem;
   margin-bottom: 3rem;
-  background-color:#3C4048;
-  color: white;
+  background-color:#B8DFD8;
+  color: black;
 }
 .customer-welcome > .hello-person {
  font-size: 38px;
@@ -270,7 +270,8 @@ color:#00ABB3;
   flex-direction: column;
   align-items: center;
   margin-top: 1rem;
-  background-color:#00ABB3;
+  color: #E8F6EF;
+  background-color:#4C4C6D;
   font-size:15px;
 }
 
@@ -286,7 +287,7 @@ color:#00ABB3;
   flex-direction: column;
   align-items: center;
   height: 10rem;
-  background-color: #3C4048;
+  background-color: #4C4C6D;
 }
 .book-card {
   border: 1px solid black;
@@ -294,13 +295,13 @@ color:#00ABB3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #EAEAEA;
+  background-color:#E8F6EF;
   margin-top: 3rem;
   width: 66%;
   box-shadow: 22px 13px;
 }
 .section-label{
- color:#EAEAEA;
+ color:black;
  size:17px;
  font-weight: 400;
 }
@@ -308,6 +309,15 @@ color:#00ABB3;
 .book-card >img {
   height:8rem;
   
+}
+.post-Fail,
+.fetch-Fail {
+color:black;
+font-size: x-large;
+}
+.no-record {
+  color:#E8F6EF;
+  font-size: x-large;
 }
 .hidden {
   display: none; 
