--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,15 +33,6 @@ flex-direction: column;
 width: 30%;
 background-color:#FFE194;
 }
-form {
-  border: 2px solid;
-  margin-top: 4rem;
-  width: 100%;
-  height: 23rem;
-  display: flex;
-  flex-direction: column;
-  background-color:#B8DFD8;
-}
 fieldset{
   height: 100%;
   display: flex;
@@ -52,8 +43,8 @@ fieldset{
 }
 select,
 input {
-width: 10rem;
-height: 2rem;
+  width: 10rem;
+  height: 2rem;
 }
 article {
   width: 73%;
@@ -76,8 +67,8 @@ article {
   cursor:grab;
 }
 .logout:hover {
-background-color:white;
-color:#4C4C6D;
+  background-color:white;
+  color:#4C4C6D;
 }
 
 
@@ -169,6 +160,15 @@ color:#4C4C6D;
   background-color: white;
   color: #4C4C6D;
   cursor: grab;
+}
+.booking-form-container {
+  border: 2px solid;
+  margin-top: 4rem;
+  width: 100%;
+  height: 23rem;
+  display: flex;
+  flex-direction: column;
+  background-color:#B8DFD8;
 }
 
 .traveling-people-wrapper,
@@ -319,6 +319,62 @@ font-size: x-large;
   color:#E8F6EF;
   font-size: x-large;
 }
+
+/* login-area */
+.login-area {
+  border: 2px solid black;
+  height: 31rem;
+  position: absolute;
+  top: 10rem;
+  left: 22rem;
+  width: 48rem;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  background-color: #FFE194;
+}
+.login-intro-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.book-title {
+  color: #4C4C6D;
+}
+
+.bookify-entry {
+  height: 14rem;
+  width: 22rem;
+}
+.entry-wrapper {
+  border: 2px solid;
+  height: 17rem;
+  width: 31rem;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  background-color:#B8DFD8;
+}
+.size-up {
+  width: 13rem;
+  height: 3rem;
+  font-size: x-large;
+}
+.login-Btn {
+  width: 11rem;
+  height: 3rem; 
+  background-color: #4C4C6D;
+  color:#EAEAEA;
+  font-size: 30px;
+}
+.login-Btn:hover {
+  background-color: #E8F6EF;
+  color:#4C4C6D;
+  cursor: grabbing;
+}
+
 .hidden {
   display: none; 
 }
